register a No Code file type

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -27,6 +27,11 @@
     <!-- Extension points defined by the plugin.
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-extension-points.html -->
     <extensions defaultExtensionNs="com.intellij">
-
+        <fileType name="No Code File"
+                implementationClass="com.example.nocode.NoCodeFileType"
+                fieldName="INSTANCE"
+                language="NoCode"
+                extensions="nocode"/>
     </extensions>
+
 </idea-plugin>
